--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "acorn": "^7.1.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.5",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.14.0",
